# tinkoff-diadoc

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: CI.yaml
src/: conftest.py  entrypoint.py  mypy.ini
src/app/: models.py  sentry.py  settings.py  types.py
src/app/fixtures/: __init__.py  settings.py
src/app/tests/: test_settings.py
src/config/: __init__.py  settings.py  types.py
src/config/tests/: tests_settings.py
src/diadoc/: client.py  exceptions.py  http.py  models.py  proto_types.py  types.py
src/diadoc/services/: __init__.py  diadoc_organization_getter.py
src/diadoc/tests/: conftest.py  tests_http.py
src/diadoc/tests/.fixtures/: GetCounteragents.json  GetCounteragents_page_one.json  GetCounteragents_page_two.json  GetMyOrganizations.json  GetOrganizationsByInnKpp.json
src/diadoc/tests/client/: conftest.py  tests_acquire_counteragent.py  tests_get_counteragents.py  tests_get_my_organization_ids.py  tests_get_my_organizations.py  tests_get_organizations_by_inn_kpp.py
src/tinkoff_business/: __init__.py  client.py  http.py  models.py  types.py
src/tinkoff_business/services/: __init__.py  tinkoff_bank_account_getter.py  tinkoff_payers_getter.py
src/tinkoff_business/tests/: conftest.py  tests_http.py
src/tinkoff_to_diadoc/: __init__.py  exceptions.py  service.py
src/tinkoff_to_diadoc/tests/: conftest.py  tests_tinkoff_to_diadoc.py  tests_tinkoff_to_diadoc_exclude_partners_not_needed_to_invite.py  tests_tinkoff_to_diadoc_exclude_payers_in_partners.py  tests_tinkoff_to_diadoc_filter_diadoc_entities_to_invite.py  tests_tinkoff_to_diadoc_get_bank_accounts.py  tests_tinkoff_to_diadoc_get_counteragents.py  tests_tinkoff_to_diadoc_get_diadoc_entities_from_payers.py  tests_tinkoff_to_diadoc_get_distinct_partners_from_payers.py  tests_tinkoff_to_diadoc_get_my_company.py  tests_tinkoff_to_diadoc_get_recent_distinct_payers.py  tests_tinkoff_to_diadoc_property_my_company.py  tests_tinkoff_to_diadoc_propery_bank_accounts.py  tests_tinkoff_to_diadoc_send_invites.py
(+14 files in other folders)
